Correcting file name to JQUERY instead of jQuery

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	</div>
 
 	<script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
-	<script type="text/javascript" src="jQuery/game.js"></script>
+	<script type="text/javascript" src="JQuery/game.js"></script>
 </body>
 
 </html>
